--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<h2>Code Fellow Ship</h2><br>
+
 <button><a href="/signup">SignUp</a></button>
 
 <button><a href="/login">LogIn</a></button>
