lab16 and lab 17

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<p th:text="${username}"></p>
 <button><a href="/signup">SignUp</a></button>
 
 <button><a href="/login">LogIn</a></button>
