--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+<div th:replace="header :: header">...</div>
 <p th:text="${username}"></p>
 
 <button><a href="/signup">SignUp</a></button>
