--- a/src/main/resources/templates/findusers.html
+++ b/src/main/resources/templates/findusers.html
@@ -6,24 +6,13 @@
 </head>
 <body>
 <div th:replace="header :: header">...</div>
-<p th:text="${username}"></p>
-
+<div th:each="user:${users}">
 <p>User Name: <span th:text="${user.username}"></span></p>
 <p>First Name: <span th:text="${user.firstName}"></span></p>
 <p>Last Name: <span th:text="${user.lastName}"></span></p>
 <p>Date Of Birth: <span th:text="${user.dateOfBirth}"></span></p>
 <p>Bio: <span th:text="${user.bio}"></span></p>
-
-
-<form action="/post" method="POST">
-    <textarea name="body" id="body"></textarea>
-    <input type="submit" value="submit"/>
-</form>
-<div th:each="post: ${user.posts}">
-
-    <p th:text="${post.body}"></p>
-    <p th:text="${post.time}"></p>
-
+    <a th:href="'/users/'+${user.id}">Go to Profile</a>
 </div>
 </body>
 </html>
