--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <div>
+    <div th:replace="header :: header">...</div>
   <form th:action="@{/signup}" method="POST">
 
         <label for="username">Your userName</label>
